--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "author": "joaooliveiradev <joaooliveira1775@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^27.4.3"
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.3",
+    "ts-jest": "^27.1.0",
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "test": "jest "
